Add java support